# vpp-api

./: .gitignore  Cargo.toml
.github/workflows/: build-test-docker.yaml  daily-security.yaml  rust.yaml  test.yaml
docker/: Docker  Dockerfile
vpp-api-client/: Cargo.toml  build.rs
vpp-api-client/src/: lib.rs
vpp-api-encoding/: Cargo.toml  build.rs
vpp-api-encoding/src/: typ.rs
vpp-api-gen/: Cargo.toml
vpp-api-gen/code-templates/tests/: afunix-interface-test.rs  interface-test.rs
vpp-api-gen/src/: lib.rs  main.rs
vpp-api-gen/src/api_gen/: alias.rs  basetypes.rs  code_gen.rs  enums.rs  file_schema.rs  message.rs  mod.rs  opts.rs  parser_helper.rs  services.rs  types.rs  util.rs
vpp-api-macros/: Cargo.toml
vpp-api-macros/src/: lib.rs
vpp-api-macros/tests/: message-test.rs  unit-test.rs
vpp-api-message/: Cargo.toml
vpp-api-message/src/: lib.rs
vpp-api-transport/: Cargo.toml  build.rs
vpp-api-transport/examples/: vpp-api-transport-test.rs
vpp-api-transport/src/: error.rs  helpers.rs  lib.rs  message.rs  reqrecv.rs
vpp-api-transport/src/afunix/: client.rs  mod.rs
vpp-api-transport/src/shmem/: blocking.rs  mod.rs  non_blocking.rs  vac.rs
vpp-native-client-lib-sys/: Cargo.toml  build.rs
vpp-native-client-lib-sys/25.06/api/core/: bfd.api.json  classify.api.json  crypto.api.json  flow.api.json  pg.api.json  rd_cp.api.json  syslog.api.json  tapv2.api.json
vpp-native-client-lib-sys/25.06/api/plugins/: abf.api.json  acl.api.json  cdp.api.json  ct6.api.json  gre.api.json  gtpu.api.json  ioam_cache.api.json  ioam_vxlan_gpe.api.json  lldp.api.json  mactime.api.json  memif.api.json  nat64.api.json  pvti.api.json  sflow.api.json  sr_mobile_types.api.json  svs.api.json  tls_openssl.api.json  trace.api.json  vxlan_gpe_ioam_export.api.json  wireguard.api.json
vpp-native-client-lib-sys/25.06/lib/aarch64/: libvppapiclient.so.25.06
vpp-native-client-lib-sys/25.06/lib/x86_64/: libvppapiclient.so.25.06
vpp-native-client-lib-sys/25.10/api/core/: arp.api.json  bier.api.json  dev.api.json  fib.api.json  ip.api.json  ip_neighbor.api.json  ipip.api.json  ipsec.api.json  l2.api.json  mpls.api.json  p2p_ethernet.api.json  pipe.api.json  policer.api.json  sr_pt.api.json  sr_types.api.json  teib.api.json  vpe.api.json
vpp-native-client-lib-sys/25.10/api/plugins/: avf.api.json  dhcp.api.json  dhcp6_ia_na_client_cp.api.json  dns.api.json  dslite.api.json  gre.api.json  http_static.api.json  ikev2.api.json  ikev2_types.api.json  ioam_export.api.json  ip_session_redirect.api.json  l3xc.api.json  lacp.api.json  lisp.api.json  mdata.api.json  mss_clamp.api.json  nat44_ei.api.json  nat66.api.json  nsh.api.json  nsim.api.json  one.api.json  ping.api.json  pot.api.json  pppoe.api.json  sflow.api.json  sr_mobile.api.json  urpf.api.json  vhost_user.api.json  vrrp.api.json  vxlan.api.json
vpp-native-client-lib-sys/25.10/lib/aarch64/: libvppapiclient.so.25.10
vpp-native-client-lib-sys/25.10/lib/x86_64/: libvppapiclient.so.25.10
vpp-native-client-lib-sys/api/core/: bfd.api.json  bond.api.json  feature.api.json  gso.api.json  interface.api.json  ip6_nd.api.json  ipfix_export.api.json  ipsec_types.api.json  pg.api.json  policer_types.api.json  punt.api.json  session.api.json  span.api.json  sr.api.json  tcp.api.json  udp.api.json  virtio.api.json
vpp-native-client-lib-sys/api/plugins/: adl.api.json  af_packet.api.json  af_xdp.api.json  arping.api.json  bpf_trace_filter.api.json  cnat.api.json  crypto_sw_scheduler.api.json  det44.api.json  geneve.api.json  idpf.api.json  igmp.api.json  l2tp.api.json  lisp_gpe.api.json  map.api.json  nat44_ed.api.json  pnat.api.json  sr_mpls.api.json  stn.api.json  udp_ping.api.json
vpp-native-client-lib-sys/lib/aarch64/: libvppapiclient.so.25.10
vpp-release/25.10/api/core/: qos.api.json  vlib.api.json
vpp-release/25.10/api/plugins/: auto_sdl.api.json  dhcp6_pd_client_cp.api.json  flowprobe.api.json  lb.api.json  lcp.api.json  npt66.api.json  rdma.api.json  vmxnet3.api.json  vxlan_gpe.api.json
