[workspace]
resolver = "2"
members = [
	"vpp-api-encoding",
	"vpp-api-gen",
	"vpp-api-macros",
	"vpp-api-message",
	"vpp-api-transport",
	"vpp-api-client",
	"vpp-native-client-lib-sys",
]

[workspace.metadata.build-config]
vpp-version = "25.06"

[workspace.dependencies]
vpp-api-gen = { path = "vpp-api-gen" }
vpp-native-client-lib-sys = { path = "vpp-native-client-lib-sys" }
vpp-api-encoding = { path = "vpp-api-encoding" }
vpp-api-macros = { path = "vpp-api-macros" }
vpp-api-message = { path = "vpp-api-message" }
vpp-api-transport = { path = "vpp-api-transport" }
