[workspace]
resolver = "2"
members = [
	"vpp-api-encoding",
	"vpp-api-gen",
	"vpp-api-macros",
	"vpp-api-message",
	"vpp-api-transport",
	"vpp-api-client",
	"vpp-native-client-lib-sys",
]

[workspace.dependencies]
vpp-api-gen = { path = "vpp-api-gen" }
vpp-native-client-lib-sys = { path = "vpp-native-client-lib-sys" }
vpp-api-encoding = { path = "vpp-api-encoding" }
vpp-api-macros = { path = "vpp-api-macros" }
vpp-api-message = { path = "vpp-api-message" }
vpp-api-transport = { path = "vpp-api-transport" }

trybuild = { version = "1.0.114", features = ["diff"] }
typenum = "1.19.0"
bincode = "1.1.3"
syn = { version= "2.0.111", features=["extra-traits","full"]}
quote = "1.0.42"
proc-macro2 = "1.0.104"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
serde_repr = "0.1.20"
serde_yaml = "0.9.34-deperecated"
log = "0.4.29"
generic-array = { version = "1.3.5", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
strum = "0.27.2"
strum_macros = "0.27.2"
env_logger = "0.11.8"
linked-hash-map = { version = "0.5.6", features = ["serde_impl"] }
convert_case = "0.10.0"
lazy_static = "1.5.0"
regex = "1.12.2"
bindgen = "0.72.1"
toml = "0.9.8"
cfg-if = "1.0.4"