[package]
name = "vpp_api_client"
version = "0.0.1"
edition = "2024"
description = "fd.io client library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ayourtch/vpp-api-transport"
homepage = "https://wiki.fd.io/view/VPP"

[features]
default = ["version_25_10"]
version_25_10 = []
version_25_06 = []

[lib]
name = "vpp_api_client"
path = "src/lib.rs"

[dependencies]
vpp-api-gen.workspace = true
vpp-api-encoding.workspace = true
vpp-api-macros.workspace = true
vpp-api-message.workspace = true
vpp-api-transport.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
typenum = "*"
bincode = "1.1.3"

[build-dependencies]
vpp-api-gen.workspace = true
toml = "0.9.8"

