[package]
name = "vpp_api_client"
version = "0.1.6"
edition = "2024"
description = "fd.io client library"
license = "MIT OR Apache-2.0"
homepage = "https://wiki.fd.io/view/VPP"

[features]
default = ["version_25_10"]
version_25_10 = []
version_25_06 = []

[lib]
name = "vpp_api_client"
path = "src/lib.rs"

[dependencies]
vpp-api-gen.workspace = true
vpp-api-encoding.workspace = true
vpp-api-macros.workspace = true
vpp-api-message.workspace = true
vpp-api-transport.workspace = true
serde.workspace = true
serde_repr.workspace = true
typenum.workspace = true
bincode.workspace = true

[build-dependencies]
vpp-api-gen.workspace = true
toml.workspace = true

