[package]
name = "vpp-api-encoding"
version = "0.1.0"
authors = ["Andrew Yourtchenko <ayourtch@gmail.com>"]
edition = "2024"

[dev-dependencies]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
log = "0.4.29"
serde_json = "1.0.147"
serde_yaml = "0.8"
minreq = { version = "2.14.1", features = ["https-rustls", "json-using-serde"] }
clap = { version = "4.5.53", features = ["derive"] }
typenum = "1.19.0"
generic-array = { version = "1.3.5", features = ["serde"] }
bincode = "1.1.3"
serde_repr = "0.1.20"


