[package]
name = "vpp-api-gen"
version = "0.1.0"
authors = ["Andrew Yourtchenko <ayourtch@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
trybuild = { version = "1.0.114", features = ["diff"] }

[[bin]]
name = "api-gen"
path = "src/main.rs"

[lib]
name = "vpp_api_gen"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
clap = { version = "4.5.53", features = ["derive"] }
strum = "0.27.2"
strum_macros = "0.27.2"
log = "0.4.29"
env_logger = "0.11.8"
linked-hash-map = { version = "0.5.6", features = ["serde_impl"] }
convert_case = "0.10.0"
serde_repr = "0.1.20"
typenum = "1.19.0"
bincode = "1.1.3"
serde_yaml = "0.8"
lazy_static = "1.5.0"
regex = "1.12.2"
syn = { version= "2.0.111", features=["extra-traits","full"]}
quote = "1.0.42"
proc-macro2 = "1.0.103"

