[package]
name = "vpp-api-gen"
version = "0.1.6"
authors = ["Andrew Yourtchenko <ayourtch@gmail.com>"]
edition = "2024"


[dev-dependencies]
trybuild = { version = "1.0.114", features = ["diff"] }

[[bin]]
name = "api-gen"
path = "src/main.rs"

[lib]
name = "vpp_api_gen"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
strum.workspace = true
strum_macros.workspace = true
log.workspace = true
env_logger.workspace = true
linked-hash-map.workspace = true
convert_case.workspace = true
serde_repr.workspace = true
lazy_static.workspace = true
regex.workspace = true

