[package]
name = "vpp-api-macros"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
vpp-api-encoding.workspace = true
vpp-api-message.workspace = true
trybuild = { version = "1.0.114", features = ["diff"] }
generic-array = { version = "1.3.5", features = ["serde"] }
typenum = "1.19.0"
serde = { version = "1.0.228", features = ["derive"] }
bincode = "1.1.3"


[dependencies]
syn = { version= "1.0", features=["extra-traits","full"]}
quote = "1.0.9"
proc-macro2 = "1.0.103"
