[package]
name = "vpp-api-macros"
version = "0.1.6"
edition = "2024"

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
vpp-api-encoding.workspace = true
vpp-api-message.workspace = true
trybuild.workspace = true
typenum.workspace = true
bincode.workspace = true


[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
