[package]
name = "vpp-api-transport"
version = "0.1.6"
authors = ["Andrew Yourtchenko <ayourtch@gmail.com>"]
edition = "2024"
description = "fd.io VPP API transport over shared memory and sockets"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ayourtch/vpp-api-transport"
homepage = "https://wiki.fd.io/view/VPP"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "vpp_api_transport"
path = "src/lib.rs"

[[example]]
name = "vpp-api-transport-test"

[dependencies]
vpp-native-client-lib-sys.workspace = true
vpp-api-message.workspace = true
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.1.3"
log = "0.4.14"

[dev-dependencies]
serde_json = "1.0"
serde_yaml = "0.8"
clap = { version = "4.5.53", features = [ "derive" ] }


[build-dependencies]
vpp-native-client-lib-sys.workspace = true
bindgen = "0.72.1"
toml = "0.9.8"