[package]
name = "vpp-api-transport"
version = "0.1.6"
authors = ["Andrew Yourtchenko <ayourtch@gmail.com>"]
edition = "2024"
description = "fd.io VPP API transport over shared memory and sockets"
license = "MIT OR Apache-2.0"
homepage = "https://wiki.fd.io/view/VPP"

[features]
25_10 = [
    "vpp-native-client-lib-sys/25_10",
]
25_06 = [
    "vpp-native-client-lib-sys/25_06"
]

[lib]
name = "vpp_api_transport"
path = "src/lib.rs"

[[example]]
name = "vpp-api-transport-test"

[dependencies]
vpp-native-client-lib-sys.workspace = true
vpp-api-message.workspace = true
vpp-api-encoding.workspace = true
lazy_static.workspace = true
serde.workspace = true
bincode-next.workspace = true
log.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
typenum.workspace = true
futures.workspace = true
futures-util.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true

[dev-dependencies]
serde_json.workspace = true
serde_yaml_bw.workspace = true
clap.workspace = true

[build-dependencies]
vpp-native-client-lib-sys.workspace = true
bindgen.workspace = true
toml.workspace = true